# sandbox

./: .gitignore  download_arxiv.sh  pyproject.toml  ruff.toml  start.sh
MedPerturb/: README.md  clinician_demographics.csv  data.csv  index.html  requirements.txt
MedPerturb/assets/: medperturb.jsonld  medperturb_metadata.jsonld
MedPerturb/case_studies/: case_study1.ipynb  case_study2.ipynb  dataset.csv
MedPerturb/code/: evaluate_models.py  perturb_data.py  utils.py
bilingual_user_models/: PROBE_EXPERIMENTS.md  main.py  pyproject.toml  training_arguments.md  translator.py
bilingual_user_models/nbs/: age_probe_exp.ipynb  nohup.out  spanish_inference_exp.ipynb  text_corpus_analysis.ipynb  train_bilingual_control_probes.ipynb  translate_data.ipynb
bilingual_user_models/probe_checkpoints/: controlling_probe_experiment.pkl
bilingual_user_models/scripts/: age_probe_experiment.py
bilingual_user_models/talk_tuner/: batched_inference.ipynb  causality_test_on_education.ipynb  environment.yml  main.py  pyproject.toml  requirements.txt  text_corpus_analysis.ipynb  translate_data.ipynb
demos/: circuit_tracing_tutorial.ipynb
mats9/: benchmark.ipynb  evaluate_llama3_oncqa_colorful.ipynb  evaluate_perturbed.py  generate_baseline.py  repro_analysis.ipynb
medium-is-message/: .gitignore  README.md  config.py  metadata.yml  requirements.txt
modal/: image.py  test_dataset_caching.py  volume.py
nnsight/: activation_patching.py  attribution_pathcing.py  function_vectors.py  walkthrough.py
rl/: connect_4.py  connect_4_net.py  mcts.py  minimax.py
tsback/:  index.ts
(+25 files in other folders)
