[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "circuitsvis>=1.43.3",
    "deep-translator>=1.11.4",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.5",
    "modal>=1.1.4",
    "nbformat>=5.10.4",
    "nnsight>=0.4.11",
    "openai>=1.100.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "transformers>=4.55.2",
]

[tool.uv.workspace]
members = [
    "bilingual_user_models/talk_tuner",
    "bilingual_user_models",
]
